--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,13 @@
     <script src="%PUBLIC_URL%/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
     <script src="%PUBLIC_URL%/js/dataTables.select.min.js"></script>
 
+    <script>
+            {$(document).ready( function () {
+                $('#manajemendata').DataTable()
+            } )
+            }
+        </script>
+
     <!-- End plugin js for this page -->
     <!-- inject:js -->
     <script src="%PUBLIC_URL%/js/off-canvas.js"></script>
