--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="ATR/BPN RDTR REALTIME" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="ATR/BPN RDTR REALTIME" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -21,25 +22,55 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ATR/BPN RDTR REALTIME</title>
+  <title>ATR/BPN RDTR REALTIME</title>
 
-    <!-- plugins:css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendors/feather/feather.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendors/ti-icons/css/themify-icons.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendors/css/vendor.bundle.base.css" />
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendors/datatables.net-bs4/dataTables.bootstrap4.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendors/ti-icons/css/themify-icons.css" />
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/js/select.dataTables.min.css" />
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/vertical-layout-light/style.css" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <!-- plugins:css -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendors/feather/feather.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendors/ti-icons/css/themify-icons.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendors/css/vendor.bundle.base.css" />
+  <!-- endinject -->
+  <!-- Plugin css for this page -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendors/datatables.net-bs4/dataTables.bootstrap4.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendors/ti-icons/css/themify-icons.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/js/select.dataTables.min.css" />
+  <!-- End plugin css for this page -->
+  <!-- inject:css -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/vertical-layout-light/style.css" />
+  <!-- plugins:js -->
+  <script src="%PUBLIC_URL%/vendors/js/vendor.bundle.base.js"></script>
+  <script src="%PUBLIC_URL%/js/template.js"></script>
+  <!-- endinject -->
+  <!-- inject:js -->
+  <script src="%PUBLIC_URL%/js/off-canvas.js"></script>
+  <script src="%PUBLIC_URL%/js/hoverable-collapse.js"></script>
+  <script src="%PUBLIC_URL%/js/settings.js"></script>
+  <script src="%PUBLIC_URL%/js/todolist.js"></script>
+  <!-- endinject -->
+  <!-- Custom js for this page-->
+  <script src="%PUBLIC_URL%/js/dashboard.js"></script>
+  <!-- End custom js for this page-->
+  <!-- Plugin js for this page -->
+  <script src="%PUBLIC_URL%/vendors/chart.js/Chart.min.js"></script>
+  <script src="%PUBLIC_URL%/js/Chart.roundedBarCharts.js"></script>
+  <script src="%PUBLIC_URL%/vendors/datatables.net/jquery.dataTables.js"></script>
+  <script src="%PUBLIC_URL%/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+  <script src="%PUBLIC_URL%/js/dataTables.select.min.js"></script>
+
+  <script>
+    {
+      $(document).ready(function () {
+        $('#manajemendata').DataTable()
+      })
+    }
+  </script>
+
+  <!-- End plugin js for this page -->
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -49,34 +80,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+</body>
+<script>
+  /* console.log("a")
+  document.querySelectorAll(".navbar-toggler.align-self-center")[0].addEventListener("click", function () {
+    if ((body.hasClass('sidebar-toggle-display')) || (body.hasClass('sidebar-absolute'))) {
+      body.toggleClass('sidebar-hidden');
+    } else {
+      body.toggleClass('sidebar-icon-only');
+    }
+  }) */
+</script>
 
-    <!-- plugins:js -->
-    <script src="%PUBLIC_URL%/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <script src="%PUBLIC_URL%/vendors/chart.js/Chart.min.js"></script>
-    <script src="%PUBLIC_URL%/vendors/datatables.net/jquery.dataTables.js"></script>
-    <script src="%PUBLIC_URL%/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
-    <script src="%PUBLIC_URL%/js/dataTables.select.min.js"></script>
-
-    <script>
-            {$(document).ready( function () {
-                $('#manajemendata').DataTable()
-            } )
-            }
-        </script>
-
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="%PUBLIC_URL%/js/off-canvas.js"></script>
-    <script src="%PUBLIC_URL%/js/hoverable-collapse.js"></script>
-    <script src="%PUBLIC_URL%/js/template.js"></script>
-    <script src="%PUBLIC_URL%/js/settings.js"></script>
-    <script src="%PUBLIC_URL%/js/todolist.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page-->
-    <script src="%PUBLIC_URL%/js/dashboard.js"></script>
-    <script src="%PUBLIC_URL%/js/Chart.roundedBarCharts.js"></script>
-    <!-- End custom js for this page-->
-  </body>
 </html>
