--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/vendors/css/vendor.bundle.base.css" />
   <!-- endinject -->
   <!-- Plugin css for this page -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/vendors/datatables.net-bs4/dataTables.bootstrap4.css" />
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/vendors/datatables.net-bs4/dataTables.bootstrap4.css" /> -->
   <link rel="stylesheet" href="%PUBLIC_URL%/vendors/ti-icons/css/themify-icons.css" />
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/js/select.dataTables.min.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/js/select.dataTables.min.css" /> -->
   <!-- End plugin css for this page -->
   <!-- inject:css -->
   <link rel="stylesheet" href="%PUBLIC_URL%/css/vertical-layout-light/style.css" />
@@ -47,14 +47,14 @@
   <script src="%PUBLIC_URL%/js/todolist.js"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
-  <script src="%PUBLIC_URL%/js/dashboard.js"></script>
+  <!-- <script src="%PUBLIC_URL%/js/dashboard.js"></script> -->
   <!-- End custom js for this page-->
   <!-- Plugin js for this page -->
-  <script src="%PUBLIC_URL%/vendors/chart.js/Chart.min.js"></script>
+  <!-- <script src="%PUBLIC_URL%/vendors/chart.js/Chart.min.js"></script>
   <script src="%PUBLIC_URL%/js/Chart.roundedBarCharts.js"></script>
   <script src="%PUBLIC_URL%/vendors/datatables.net/jquery.dataTables.js"></script>
   <script src="%PUBLIC_URL%/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
-  <script src="%PUBLIC_URL%/js/dataTables.select.min.js"></script>
+  <script src="%PUBLIC_URL%/js/dataTables.select.min.js"></script> -->
 
   <script>
     {
