Add userId data to cookie and add history to simulasiMap

--- a/public/index.html
+++ b/public/index.html
@@ -57,11 +57,11 @@
   <script src="%PUBLIC_URL%/js/dataTables.select.min.js"></script> -->
 
   <script>
-    {
-      $(document).ready(function () {
-        $('#manajemendata').DataTable()
-      })
-    }
+    // {
+    //   $(document).ready(function () {
+    //     $('#manajemendata').DataTable()
+    //   })
+    // }
   </script>
 
   <!-- End plugin js for this page -->
